--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,5 @@
             "dest":"/"
         }
     ],
-    "functions": { "api/test.js": { "maxDuration": 60 } }
+    "functions": { "api/index.js": { "maxDuration": 60 } }
 }
